--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -30,11 +30,16 @@
 
          <div class = "collapse navbar-collapse" id = "navbar">
             <div class = "navbar-nav">
-
+                <!-- user.is_authenticated -> allows us to hide certain nav bar elements -->
+                {% if user.is_authenticated %}
+                <a class = "nav-item nav-link" id = "home" href="/">Home</a>
+                <a class = "nav-item nav-link" id = "logout" href="/logout">Logout</a>
+                {%else%}
                 <a class = "nav-item nav-link" id = "login" href="/login">Login</a>
                 <a class = "nav-item nav-link" id = "signUp" href="/sign-up">Sign Up</a>
-                <a class = "nav-item nav-link" id = "logout" href="/logout">Logout</a>
-                <a class = "nav-item nav-link" id = "home" href="/">Home</a>
+
+                {%endif%}
+          
 
 
             </div>
@@ -55,7 +60,7 @@
             </button>
         </div>
         {% else %}
-        <div class="alert alert-success alert-dismissable fade show" role = "alert"></div>
+        <div class="alert alert-success alert-dismissable fade show" role = "alert">
             {{ i }}
             <button type = "button" class = "close" data-dismiss = "alert">
                 <span aria-hidden="true">&times;</span> <!--fancy x?-->
@@ -87,6 +92,10 @@
     src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
     crossorigin="anonymous"
+  ></script>
+
+  <script type="text/javascript"
+    src = "{{url_for('static', filename='index.js')}}"
   ></script>
 
   {# {{ }} = write a Python expression notice that this is now a comment. if u do it with the ! way it will result in an error#} 
